testsuite/tests/properties/invalid_lambda_arg_type/logic_any_index/test.lkt
from common import BaseExampleBlock, Example, FooNode, IndexedItem

class ExampleBlock: BaseExampleBlock {
    @exported fun p(): Array[Entity[Example]] =
        node.items.logic_any((_: Int) => %true).solve()
}
